<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Items">

    <Button
        android:id="@+id/tomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/tomato"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onion"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/tomato"
        app:layout_constraintTop_toBottomOf="@+id/tomato" />

    <Button
        android:id="@+id/garlic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/garlic"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/onion"
        app:layout_constraintTop_toBottomOf="@+id/onion" />

    <Button
        android:id="@+id/pepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pepper"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/garlic"
        app:layout_constraintTop_toBottomOf="@+id/garlic" />

    <Button
        android:id="@+id/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/milk"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/pepper"
        app:layout_constraintTop_toBottomOf="@+id/pepper" />

    <Button
        android:id="@+id/bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bread"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/milk"
        app:layout_constraintTop_toBottomOf="@+id/milk" />

    <Button
        android:id="@+id/ginger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ginger"
        android:onClick="chosenItem"
        app:layout_constraintStart_toStartOf="@+id/bread"
        app:layout_constraintTop_toBottomOf="@+id/bread" />
</androidx.constraintlayout.widget.ConstraintLayout>